--- a/h05/style.css
+++ b/h05/style.css
@@ -10,12 +10,49 @@ body {
 }
 
 .navigationBarList {
-  float: left;
+  display: inline;
   margin: 0;
   padding: 5px;
 }
 
 .navigationBarList:hover {
+  text-decoration: none;
   color: red;
   text-decoration: none;
+}
+
+#mainImage {
+  width: 46%;
+  float: left;
+}
+
+.SecondaryImage {
+  width: 45%;
+  margin-left: 10px;
+}
+
+#header {
+  margin: 10px 0px 0px 0px;
+  font-size: 40px;
+  font-weight: bolder;
+}
+
+.paragraphOne {
+  width: 400px;
+  height: 100px;
+  float: left;
+  font-size: 20px;
+  margin: 10px 10px 10px 10px;
+}
+
+.textArticle {
+  width: 400px;
+  float: left;
+  font-size: 20px;
+  margin: 10px 10px 10px 10px;
+}
+
+#footballPicture {
+  width: 400px;
+  margin: 10px;
 }
