--- a/h06/loginstyle.css
+++ b/h06/loginstyle.css
@@ -7,5 +7,14 @@ body {
 
 td, tr {
   padding: 5px;
-  border: 1px solid black;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.link:hover {
+  text-decoration: none;
+  color: red;
+  text-decoration: none;
 }
